--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -17,16 +17,20 @@
     "@types/knex": "^0.16.1",
     "@types/node": "^22.8.6",
     "@types/sqlite3": "^3.1.11",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "knex": "^3.1.0",
     "nodemon": "^3.1.7",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2"
   }
 }
